[package]
name = "webhook-forwarder-server"
version = "0.0.1"
edition = "2024"

[features]
stackdriver = []

[dependencies]
anyhow.workspace = true
axum = "0.8.4"
base64.workspace = true
ciborium.workspace = true
dashmap = "6.1.0"
futures-util = "0.3.31"
serde.workspace = true
tokio-stream = { version = "0.1.17" }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
tracing-stackdriver = "0.10.0"
tracing-subscriber.workspace = true
tracing.workspace = true
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[lints]
workspace = true
